--- a/Practice-Typescript/section10/package.json
+++ b/Practice-Typescript/section10/package.json
@@ -8,5 +8,10 @@
         "next": "^9.0.0",
         "react": "^16.13.1",
         "react-dom": "^16.13.1"
+    },
+    "devDependencies": {
+        "@types/node": "^14.0.27",
+        "@types/react": "^16.9.46",
+        "typescript": "^3.9.7"
     }
 }
