--- a/Practice-Typescript/section10/package.json
+++ b/Practice-Typescript/section10/package.json
@@ -7,11 +7,13 @@
     "dependencies": {
         "next": "^9.0.0",
         "react": "^16.13.1",
-        "react-dom": "^16.13.1"
+        "react-dom": "^16.13.1",
+        "styled-components": "^5.1.1"
     },
     "devDependencies": {
         "@types/node": "^14.0.27",
         "@types/react": "^16.9.46",
+        "@types/styled-components": "^5.1.2",
         "typescript": "^3.9.7"
     }
 }
